--- a/src/dbt_data.ipynb
+++ b/src/dbt_data.ipynb
@@ -20,7 +20,7 @@
     "DROP TABLE IF EXISTS zzz_games;\n",
     "DROP TABLE IF EXISTS zzz_teams;\n",
     "\n",
-    "CREATE TABLE `development-catalog`.`dbt-schema`.zzz_game_opponents (\n",
+    "CREATE TABLE IF NOT EXISTS `development-catalog`.`dbt-schema`.zzz_game_opponents (\n",
     "game_id INT,\n",
     "home_team_id INT,\n",
     "visitor_team_id INT\n",
@@ -50,7 +50,7 @@
     "-- | 6       | 3            | 2               |\n",
     "-- +---------+--------------+-----------------+\n",
     "\n",
-    "CREATE TABLE `development-catalog`.`dbt-schema`.zzz_game_scores (\n",
+    "CREATE TABLE IF NOT EXISTS `development-catalog`.`dbt-schema`.zzz_game_scores (\n",
     "game_id INT,\n",
     "home_team_score INT,\n",
     "visitor_team_score INT\n",
@@ -80,7 +80,7 @@
     "-- | 6       | 3               | 1                  |\n",
     "-- +---------+-----------------+--------------------+\n",
     "\n",
-    "CREATE TABLE `development-catalog`.`dbt-schema`.zzz_games (\n",
+    "CREATE TABLE IF NOT EXISTS `development-catalog`.`dbt-schema`.zzz_games (\n",
     "game_id INT,\n",
     "game_date DATE\n",
     ") USING DELTA;\n",
@@ -109,7 +109,7 @@
     "-- | 6       | 2021-02-06 |\n",
     "-- +---------+------------+\n",
     "\n",
-    "CREATE TABLE `development-catalog`.`dbt-schema`.zzz_teams (\n",
+    "CREATE TABLE IF NOT EXISTS `development-catalog`.`dbt-schema`.zzz_teams (\n",
     "team_id INT,\n",
     "team_city VARCHAR(15)\n",
     ") USING DELTA;\n",
