Here we go again

--- a/src/dbt_data.ipynb
+++ b/src/dbt_data.ipynb
@@ -26,12 +26,12 @@
     "visitor_team_id INT\n",
     ") USING DELTA;\n",
     "\n",
-    "INSERT INTO zzz_game_opponents VALUES (1, 1, 2);\n",
-    "INSERT INTO zzz_game_opponents VALUES (2, 1, 3);\n",
-    "INSERT INTO zzz_game_opponents VALUES (3, 2, 1);\n",
-    "INSERT INTO zzz_game_opponents VALUES (4, 2, 3);\n",
-    "INSERT INTO zzz_game_opponents VALUES (5, 3, 1);\n",
-    "INSERT INTO zzz_game_opponents VALUES (6, 3, 2);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (1, 1, 2);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (2, 1, 3);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (3, 2, 1);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (4, 2, 3);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (5, 3, 1);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (6, 3, 2);\n",
     "\n",
     "-- Result:\n",
     "-- +---------+--------------+-----------------+\n",
@@ -56,12 +56,12 @@
     "visitor_team_score INT\n",
     ") USING DELTA;\n",
     "\n",
-    "INSERT INTO zzz_game_scores VALUES (1, 4, 2);\n",
-    "INSERT INTO zzz_game_scores VALUES (2, 0, 1);\n",
-    "INSERT INTO zzz_game_scores VALUES (3, 1, 2);\n",
-    "INSERT INTO zzz_game_scores VALUES (4, 3, 2);\n",
-    "INSERT INTO zzz_game_scores VALUES (5, 3, 0);\n",
-    "INSERT INTO zzz_game_scores VALUES (6, 3, 1);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (1, 4, 2);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (2, 0, 1);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (3, 1, 2);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (4, 3, 2);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (5, 3, 0);\n",
+    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (6, 3, 1);\n",
     "\n",
     "-- Result:\n",
     "-- +---------+-----------------+--------------------+\n",
