--- a/src/dbt_data.ipynb
+++ b/src/dbt_data.ipynb
@@ -20,18 +20,18 @@
     "DROP TABLE IF EXISTS zzz_games;\n",
     "DROP TABLE IF EXISTS zzz_teams;\n",
     "\n",
-    "CREATE TABLE IF NOT EXISTS `development-catalog`.`dbt-schema`.zzz_game_opponents (\n",
+    "CREATE TABLE IF NOT EXISTS `development_catalog`.`dbt-schema`.zzz_game_opponents (\n",
     "game_id INT,\n",
     "home_team_id INT,\n",
     "visitor_team_id INT\n",
     ") USING DELTA;\n",
     "\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (1, 1, 2);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (2, 1, 3);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (3, 2, 1);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (4, 2, 3);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (5, 3, 1);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_opponents VALUES (6, 3, 2);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_opponents VALUES (1, 1, 2);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_opponents VALUES (2, 1, 3);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_opponents VALUES (3, 2, 1);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_opponents VALUES (4, 2, 3);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_opponents VALUES (5, 3, 1);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_opponents VALUES (6, 3, 2);\n",
     "\n",
     "-- Result:\n",
     "-- +---------+--------------+-----------------+\n",
@@ -50,18 +50,18 @@
     "-- | 6       | 3            | 2               |\n",
     "-- +---------+--------------+-----------------+\n",
     "\n",
-    "CREATE TABLE IF NOT EXISTS `development-catalog`.`dbt-schema`.zzz_game_scores (\n",
+    "CREATE TABLE IF NOT EXISTS `development_catalog`.`dbt-schema`.zzz_game_scores (\n",
     "game_id INT,\n",
     "home_team_score INT,\n",
     "visitor_team_score INT\n",
     ") USING DELTA;\n",
     "\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (1, 4, 2);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (2, 0, 1);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (3, 1, 2);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (4, 3, 2);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (5, 3, 0);\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_game_scores VALUES (6, 3, 1);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_scores VALUES (1, 4, 2);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_scores VALUES (2, 0, 1);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_scores VALUES (3, 1, 2);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_scores VALUES (4, 3, 2);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_scores VALUES (5, 3, 0);\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_game_scores VALUES (6, 3, 1);\n",
     "\n",
     "-- Result:\n",
     "-- +---------+-----------------+--------------------+\n",
@@ -80,17 +80,17 @@
     "-- | 6       | 3               | 1                  |\n",
     "-- +---------+-----------------+--------------------+\n",
     "\n",
-    "CREATE TABLE IF NOT EXISTS `development-catalog`.`dbt-schema`.zzz_games (\n",
+    "CREATE TABLE IF NOT EXISTS `development_catalog`.`dbt-schema`.zzz_games (\n",
     "game_id INT,\n",
     "game_date DATE\n",
     ") USING DELTA;\n",
     "\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_games VALUES (1, '2020-12-12');\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_games VALUES (2, '2021-01-09');\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_games VALUES (3, '2020-12-19');\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_games VALUES (4, '2021-01-16');\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_games VALUES (5, '2021-01-23');\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_games VALUES (6, '2021-02-06');\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_games VALUES (1, '2020-12-12');\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_games VALUES (2, '2021-01-09');\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_games VALUES (3, '2020-12-19');\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_games VALUES (4, '2021-01-16');\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_games VALUES (5, '2021-01-23');\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_games VALUES (6, '2021-02-06');\n",
     "\n",
     "-- Result:\n",
     "-- +---------+------------+\n",
@@ -109,14 +109,14 @@
     "-- | 6       | 2021-02-06 |\n",
     "-- +---------+------------+\n",
     "\n",
-    "CREATE TABLE IF NOT EXISTS `development-catalog`.`dbt-schema`.zzz_teams (\n",
+    "CREATE TABLE IF NOT EXISTS `development_catalog`.`dbt-schema`.zzz_teams (\n",
     "team_id INT,\n",
     "team_city VARCHAR(15)\n",
     ") USING DELTA;\n",
     "\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_teams VALUES (1, \"San Francisco\");\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_teams VALUES (2, \"Seattle\");\n",
-    "INSERT INTO `development-catalog`.`dbt-schema`.zzz_teams VALUES (3, \"Amsterdam\");\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_teams VALUES (1, \"San Francisco\");\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_teams VALUES (2, \"Seattle\");\n",
+    "INSERT INTO `development_catalog`.`dbt-schema`.zzz_teams VALUES (3, \"Amsterdam\");\n",
     "\n",
     "-- Result:\n",
     "-- +---------+---------------+\n",
